--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@nillion/client-react-hooks": "next",
-    "@nillion/client-vms": "next",
+    "@nillion/client-react-hooks": "^0.2.0-rc.3",
+    "@nillion/client-vms": "^0.2.0-rc.3",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
